--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -32,13 +32,18 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
+
+  image-rendering: smooth;
   color: #fff5d3;
 }
+
+
 
 @media (min-width: 768px) {
   html,
   body {
-    background-image: url('/assets/background_desktop.webp');
+    background-image: url('/assets/bg1.jpeg');
+    background-size: cover;
   }
 }
 
