--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,22 +3,22 @@ const socialNetworks = [
   {
     name: 'Instagram',
     icon: '/assets/social/instagram.svg',
-    url: '#',
+    url: 'https://www.instagram.com/alejogonzalez/',
   },
   {
     name: 'TikTok',
     icon: '/assets/social/tick-tock.svg',
-    url: '#',
+    url: 'https://www.tiktok.com/@alejogonzaleztiktok',
   },
   {
     name: 'Facebook',
     icon: '/assets/social/facebook.svg',
-    url: '#',
+    url: 'https://www.facebook.com/share/17JW8nA9oE/?mibextid=wwXIfr',
   },
   {
     name: 'YouTube',
     icon: '/assets/social/youtube.svg',
-    url: '#',
+    url: 'https://www.youtube.com/@Alejandrogonzalezoficial',
   },
 ];
 ---
