--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,11 +11,15 @@ import '@/styles/global.css';
     <meta name='viewport' content='width=device-width' />
     <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
     <meta name='generator' content={Astro.generator} />
-    <title>Astro Basics</title>
+    <title>Gana una serenata privada con Alejandro González | Una y Mil Noches</title>
+    <meta
+      name='description'
+      content='Participa para ganar una serenata privada con Alejandro González y dedica Una y Mil Noches. Vive una experiencia única con el artista.'
+    />
   </head>
   <body>
     <main class='container_all'>
-      <Navbar/>
+      <Navbar />
       <slot />
     </main>
     <Footer />
