--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -20,7 +20,6 @@
   --color-light-cream: #fff5d3;
   --color-purple: #975497;
   --color-blue: #44228c;
-  
 }
 
 html,
@@ -28,21 +27,32 @@ body {
   margin: 0;
   width: 100%;
   height: 100dvh;
-  background-image: url('/assets/background.png');
+  /* background-image: url('/assets/background.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  background-attachment: fixed;
+  background-attachment: fixed; */
 
   image-rendering: smooth;
   color: #fff5d3;
 }
 
-
+.background {
+  background-image: url('/assets/background.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
 
 @media (min-width: 768px) {
-  html,
+  /* html,
   body {
+    background-image: url('/assets/bg1.jpeg');
+    background-size: cover;
+  } */
+
+  .background {
     background-image: url('/assets/bg1.jpeg');
     background-size: cover;
   }
@@ -66,3 +76,5 @@ footer {
   margin: auto;
   max-width: 1047px;
 }
+
+
