--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Layout from '../layouts/Layout.astro';
 import Navbar from '@/components/Navbar';
 ---
 
-<Layout title='Home'>
+<Layout title='Gana una serenata privada con Alejandro González | Una y Mil Noches'>
   <div class='background'>
     <div class='container_all'>
       <Navbar client:load />
