--- a/src/pages/participa.astro
+++ b/src/pages/participa.astro
@@ -6,6 +6,6 @@ const GOOGLE_CLIENT_ID = import.meta.env.PUBLIC_GOOGLE_CLIENT_ID;
 const GOOGLE_SHEETS_URL = import.meta.env.PUBLIC_GOOGLE_SHEETS_URL;
 ---
 
-<Layout title='Participa'>
+<Layout title='Gana una serenata privada con Alejandro González | Una y Mil Noches'>
   <RegistroWizard client:load clientId={GOOGLE_CLIENT_ID} sheetsUrl={GOOGLE_SHEETS_URL} />
 </Layout>
