--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,7 @@ import Navbar from '@/components/Navbar';
       <div class='py-4 md:pb-[104px] md:mt-[54px] relative'>
         <img class='w-full max-h-[396px] object-cover' src='/assets/una_y_mil_noches.webp' alt='una y mil noches' />
         <div class='absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2'>
-          <Buttons client:load href='/participa'> Participa </Buttons>
+          <Buttons customClass='participar' client:load href='/participa'> Participa </Buttons>
         </div>
       </div>
 
