--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -37,7 +37,7 @@ const socialNetworks = [
               href={social.url}
               target='_blank'
               rel='noopener noreferrer'
-              class='transition-transform hover:scale-110 duration-200'
+              class={`transition-transform hover:scale-110 duration-200 ${social.name}`}
               aria-label={social.name}
             >
               <img src={social.icon} alt={`${social.name} icon`} class='w-6 h-6 my-8' />
