--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,7 +20,7 @@ const canonicalURL = new URL(canonical, baseUrl).href;
 ---
 
 <!doctype html>
-<html lang='en'>
+<html lang='es'>
   <head>
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
