--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,11 +23,18 @@ const canonicalURL = new URL(canonical, baseUrl).href;
 <html lang='es'>
   <head>
     <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-WW4HTXV5');</script>
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != 'dataLayer' ? '&l=' + l : '';
+        j.async = true;
+        j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, 'script', 'dataLayer', 'GTM-WW4HTXV5');
+    </script>
     <!-- End Google Tag Manager -->
 
     <meta charset='UTF-8' />
@@ -36,14 +43,16 @@ const canonicalURL = new URL(canonical, baseUrl).href;
     <meta name='generator' content={Astro.generator} />
     <title>{title}</title>
     <meta name='description' content={description} />
-    <meta name='robots' content='index, follow' />
+    <meta name='robots' content='noindex, nofollow' />
     <link rel='canonical' href={canonicalURL} />
     <link rel='sitemap' type='application/xml' href='/sitemap.xml' />
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WW4HTXV5"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <noscript
+      ><iframe src='https://www.googletagmanager.com/ns.html?id=GTM-WW4HTXV5' height='0' width='0' style='display:none;visibility:hidden'
+      ></iframe></noscript
+    >
     <!-- End Google Tag Manager (noscript) -->
     <main>
       <slot />
